Refactor server into modular handlers, models, and utils
- Move S3 API handlers into src/handlers/ - Add models for config, S3
responses, and app state in src/models/ - Add utility modules for bucket
validation, DB setup, and logging in src/utils/ - Improve error handling
and logging - Add support for MD5 hashes and HEAD object metadata - Add
database connection pool configuration and periodic optimization -
Update dependencies and enable chrono serde feature - Update main.rs to
use new modules and cleaner startup logic

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2024"
 [dependencies]
 log = "0.4"
 env_logger = "0.11"
-chrono = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
 actix-web = "4"
 rusqlite = { version = "0.37", features = ["bundled"] }
 serde = { version = "1", features = ["derive"] }
@@ -17,6 +17,9 @@ toml = "0.9"
 r2d2 = "0.8"
 r2d2_sqlite = "0.31"
 url = "2"
+md5 = "0.8"
+hex = "0.4"
+num_cpus = "1"
 
 [dev-dependencies]
 ndarray = { version = "0.16" }
