--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,14 @@ edition = "2024"
 log = "0.4"
 env_logger = "0.11"
 chrono = { version = "0.4", features = ["serde"] }
-actix-web = "4"
+axum = "0.8"
+tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
+hyper = { version = "1", features = ["full"] }
+tower = { version = "0.5" }
+tower-http = { version = "0.6", features = ["trace", "limit"] }
 rusqlite = { version = "0.37", features = ["bundled"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
 config = "0.15"
 toml = "0.9"
 r2d2 = "0.8"
@@ -20,6 +23,12 @@ url = "2"
 md5 = "0.8"
 hex = "0.4"
 num_cpus = "1"
+bytes = "1"
+http = "1"
+http-body = "1"
+futures = "0.3"
+tracing = "0.1"
+tracing-subscriber = "0.3"
 
 [dev-dependencies]
 ndarray = { version = "0.16" }
